--- a/kanjmemoriMrDJ5.html
+++ b/kanjmemoriMrDJ5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanji-Hiragana Memori</title>
+    <title>Kanji-Hiragana Memori Mr DJ</title>
     <style>
         /* CSS untuk tampilan game */
         body {
@@ -36,7 +36,7 @@
         .game-board {
             display: grid;
             /* Grid 6 kolom dengan lebar yang sama */
-            grid-template-columns: repeat(6, 1fr);
+            grid-template-columns: repeat(4, 1fr);
             gap: 40px;
             max-width: 500px;
             margin: auto;
@@ -95,7 +95,7 @@
         .card-back[data-type="hiragana"] {
             background-color: #90CAF9; /* Warna hijau muda untuk kartu Hiragana */
             color: #333;
-            font-size: 1.5em;
+            font-size: 1em;
             border-color: rgb(243, 245, 244);
         }
 
@@ -348,4 +348,5 @@
     </script>
 
 </body>
+
 </html>
